force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <label>Session de formation</label>
    <nameField>
        <label>Nom de Session</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions de formation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>