force-app/main/default/objects/Session__c/fields/Capacit_minimum__c.field-meta.xml
<CustomField>
    <fullName>Capacit_minimum__c</fullName>
    <label>Capacité minimum</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>