force-app/main/default/objects/Session__c/fields/Co_t_de_revient_session__c.field-meta.xml
<CustomField>
    <fullName>Co_t_de_revient_session__c</fullName>
    <label>Coût de revient session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>