force-app/main/default/objects/Session__c/fields/Code_agresso_for__c.field-meta.xml
<CustomField>
    <fullName>Code_agresso_for__c</fullName>
    <description>Ce champ va être renseigné manuellement ou par chargement et sert pour export vers AGRESSO en tant que code formation. Ex: 15SELPGM--1</description>
    <label>Code agresso Formation</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>