force-app/main/default/objects/Session__c/fields/Code_Agresso_Session_formation__c.field-meta.xml
<CustomField>
    <fullName>Code_Agresso_Session_formation__c</fullName>
    <label>Code Agresso Session formation</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>