force-app/main/default/objects/Session__c/fields/Code_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Code_Salesforce__c</fullName>
    <label>Code Salesforce</label>
    <length>50</length>
    <type>Text</type>
</CustomField>