force-app/main/default/objects/Session__c/fields/Code_session_pivot__c.field-meta.xml
<CustomField>
    <fullName>Code_session_pivot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code session pivot</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Sessions de formation (Code session pivot)</relationshipLabel>
    <relationshipName>Sessions_de_formation1</relationshipName>
    <type>Lookup</type>
</CustomField>