force-app/main/default/objects/Session__c/fields/Date_de_fin_de_session__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_session__c</fullName>
    <label>Date de fin de session</label>
    <type>Date</type>
</CustomField>