force-app/main/default/objects/Session__c/fields/Exercice_fiscale__c.field-meta.xml
<CustomField>
    <fullName>Exercice_fiscale__c</fullName>
    <label>Exercice fiscal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF-EF10</fullName>
            </value>
            <value>
                <fullName>SF-EF20</fullName>
            </value>
            <value>
                <fullName>SF-EF30</fullName>
            </value>
            <value>
                <fullName>SF-EF40</fullName>
            </value>
            <value>
                <fullName>SF-EF50</fullName>
            </value>
            <value>
                <fullName>SF-EF60</fullName>
            </value>
            <value>
                <fullName>SF-EF70</fullName>
            </value>
            <value>
                <fullName>SF-EF80</fullName>
            </value>
            <value>
                <fullName>SF-EF90</fullName>
            </value>
            <value>
                <fullName>SF-EF100</fullName>
            </value>
            <value>
                <fullName>SF-EF110</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>