force-app/main/default/objects/Session__c/fields/Intervenant__c.field-meta.xml
<CustomField>
    <fullName>Intervenant__c</fullName>
    <label>Intervenant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>