force-app/main/default/objects/Session__c/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <label>Lieu détail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>