force-app/main/default/objects/Session__c/fields/Lieu_ls__c.field-meta.xml
<CustomField>
    <fullName>Lieu_ls__c</fullName>
    <label>Lieu</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF-LS10</fullName>
            </value>
            <value>
                <fullName>SF-LS20</fullName>
            </value>
            <value>
                <fullName>SF-LS30</fullName>
            </value>
            <value>
                <fullName>SF-LS40</fullName>
            </value>
            <value>
                <fullName>SF-LS50</fullName>
            </value>
            <value>
                <fullName>SF-LS60</fullName>
            </value>
            <value>
                <fullName>SF-LS70</fullName>
            </value>
            <value>
                <fullName>SF-LS80</fullName>
            </value>
            <value>
                <fullName>SF-LS90</fullName>
            </value>
            <value>
                <fullName>SF-LS100</fullName>
            </value>
            <value>
                <fullName>SF-LS110</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>