force-app/main/default/objects/Session__c/fields/Mode_apprentissage__c.field-meta.xml
<CustomField>
    <fullName>Mode_apprentissage__c</fullName>
    <label>Mode d&apos;apprentissage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF-MA10</fullName>
            </value>
            <value>
                <fullName>SF-MA20</fullName>
            </value>
            <value>
                <fullName>SF-MA30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>