force-app/main/default/objects/Session__c/fields/Ne_pas_afficher_sur_le_site_EML__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_afficher_sur_le_site_EML__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Cocher ce champ pour ne pas exporter sur le site EML</description>
    <inlineHelpText>Cocher ce champ pour ne pas exporter sur le site EML</inlineHelpText>
    <label>Ne pas afficher sur le site EML</label>
    <type>Checkbox</type>
</CustomField>