force-app/main/default/objects/Session__c/fields/Objectif_CA_Session__c.field-meta.xml
<CustomField>
    <fullName>Objectif_CA_Session__c</fullName>
    <description>Utilisé pour les rapports BI</description>
    <label>Objectif CA Session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>