force-app/main/default/objects/Session__c/fields/Objectif_participation__c.field-meta.xml
<CustomField>
    <fullName>Objectif_participation__c</fullName>
    <description>Utilisé pour les rapports BI</description>
    <label>Objectif participation session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>