force-app/main/default/objects/Session__c/fields/Prix_specifique__c.field-meta.xml
<CustomField>
    <fullName>Prix_specifique__c</fullName>
    <label>Prix spécifique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>