force-app/main/default/objects/Session__c/fields/Produits__c.field-meta.xml
<CustomField>
    <fullName>Produits__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>