force-app/main/default/objects/Session__c/fields/S_6_avant_d_but__c.field-meta.xml
<CustomField>
    <fullName>S_6_avant_d_but__c</fullName>
    <formula>Date_de_debut_de_session__c - TODAY()  &lt;= 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S-6 avant début</label>
    <type>Checkbox</type>
</CustomField>