force-app/main/default/objects/Session__c/fields/Salle__c.field-meta.xml
<CustomField>
    <fullName>Salle__c</fullName>
    <label>Salle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>