force-app/main/default/objects/Session__c/fields/Session_de_formation_associee__c.field-meta.xml
<CustomField>
    <fullName>Session_de_formation_associee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session de formation associée</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Sessions de formation</relationshipLabel>
    <relationshipName>Sessions_de_formation</relationshipName>
    <type>Lookup</type>
</CustomField>