force-app/main/default/objects/Session__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF-SS10</fullName>
            </value>
            <value>
                <fullName>SF-SS20</fullName>
            </value>
            <value>
                <fullName>SF-SS30</fullName>
            </value>
            <value>
                <fullName>SF-SS40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>