force-app/main/default/objects/Session__c/fields/Taux_TVA__c.field-meta.xml
<CustomField>
    <fullName>Taux_TVA__c</fullName>
    <label>Taux TVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>