force-app/main/default/objects/Session__c/fields/Type_Enregistrement_Produit__c.field-meta.xml
<CustomField>
    <fullName>Type_Enregistrement_Produit__c</fullName>
    <formula>Produits__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Enregistrement Produit</label>
    <type>Text</type>
</CustomField>