force-app/main/default/objects/Session__c/fields/x18caracteres__c.field-meta.xml
<CustomField>
    <fullName>x18caracteres__c</fullName>
    <description>Id Salesforce sur 18 caractères</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>x18caracteres</label>
    <type>Text</type>
</CustomField>