force-app/main/default/objects/Session__c/validationRules/Longueur_Champ_Code_agresso_formation.validationRule-meta.xml
<ValidationRule>
    <fullName>Longueur_Champ_Code_agresso_formation</fullName>
    <active>false</active>
    <description>L&apos;utilisateur a pour obligation de saisir le champ Code_agresso_for__c à 11 caractères</description>
    <errorConditionFormula>!$User.ByPass_RV__c
 &amp;&amp; 
 (LEN( Code_agresso_for__c ) &lt;&gt; 11 )</errorConditionFormula>
    <errorMessage>Le nombre de caractères du champ Code agresso Formation doit être obligatoirement égal à 11</errorMessage>
</ValidationRule>