force-app/main/default/objects/Session__c/listViews/ACC_sessions_de_formation.listView-meta.xml
<ListView>
    <fullName>ACC_sessions_de_formation</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Produits__c</field>
        <operation>contains</operation>
        <value>booster,sport,job</value>
    </filters>
    <label>ACC_sessions de formation</label>
</ListView>