force-app/main/default/objects/Session__c/listViews/CA_EMBA_SFo.listView-meta.xml
<ListView>
    <fullName>CA_EMBA_SFo</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_agresso_for__c</field>
        <operation>equals</operation>
        <value>21CMBA----1</value>
    </filters>
    <label>CA_EMBA SFo</label>
</ListView>