force-app/main/default/objects/Session__c/listViews/EXEC_Sessions_de_PRODUITS_DE_SELECTION.listView-meta.xml
<ListView>
    <fullName>EXEC_Sessions_de_PRODUITS_DE_SELECTION</fullName>
    <columns>Produits__c</columns>
    <columns>Code_agresso_for__c</columns>
    <columns>Code_Agresso_Session_formation__c</columns>
    <columns>Date_de_debut_de_session__c</columns>
    <columns>Date_de_fin_de_session__c</columns>
    <columns>NAME</columns>
    <columns>Code_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Enregistrement_Produit__c</field>
        <operation>startsWith</operation>
        <value>Sel</value>
    </filters>
    <filters>
        <field>Code_agresso_for__c</field>
        <operation>startsWith</operation>
        <value>21</value>
    </filters>
    <label>EXEC _ Sessions de PRODUITS DE SELECTION</label>
</ListView>