force-app/main/default/objects/Session__c/listViews/LA_TOILE_Liste_des_sessions.listView-meta.xml
<ListView>
    <fullName>LA_TOILE_Liste_des_sessions</fullName>
    <columns>Produits__c</columns>
    <columns>NAME</columns>
    <columns>Code_agresso_for__c</columns>
    <columns>Code_Agresso_Session_formation__c</columns>
    <columns>Date_de_debut_de_session__c</columns>
    <columns>Date_de_fin_de_session__c</columns>
    <columns>Exercice_fiscale__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_agresso_for__c</field>
        <operation>contains</operation>
        <value>TEQN</value>
    </filters>
    <label>LA TOILE _ Liste des sessions</label>
</ListView>