force-app/main/default/objects/Session__c/listViews/Programmes_Courts_Sessions_Packs.listView-meta.xml
<ListView>
    <fullName>Programmes_Courts_Sessions_Packs</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Intervenant__c</columns>
    <columns>Produits__c</columns>
    <columns>Exercice_fiscale__c</columns>
    <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
    <columns>Statut__c</columns>
    <columns>Mode_apprentissage__c</columns>
    <columns>Code_agresso_for__c</columns>
    <columns>Code_Agresso_Session_formation__c</columns>
    <columns>NAME</columns>
    <columns>Lieu_ls__c</columns>
    <columns>Date_de_debut_de_session__c</columns>
    <columns>Date_de_fin_de_session__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Enregistrement_Produit__c</field>
        <operation>equals</operation>
        <value>pack</value>
    </filters>
    <filters>
        <field>Code_agresso_for__c</field>
        <operation>startsWith</operation>
        <value>20</value>
    </filters>
    <filters>
        <field>Capacit_minimum__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Programmes Courts - Sessions Packs 20</label>
    <language>fr</language>
    <sharedTo>
        <group>EML</group>
        <group>Opp_FC_Courte</group>
    </sharedTo>
</ListView>