force-app/main/default/objects/Session__c/listViews/V_rification_Code_Agresso_session.listView-meta.xml
<ListView>
    <fullName>V_rification_Code_Agresso_session</fullName>
    <columns>NAME</columns>
    <columns>Code_agresso_for__c</columns>
    <columns>Code_Agresso_Session_formation__c</columns>
    <columns>Date_de_debut_de_session__c</columns>
    <columns>Date_de_fin_de_session__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_agresso_for__c</field>
        <operation>startsWith</operation>
        <value>22</value>
    </filters>
    <filters>
        <field>Code_agresso_for__c</field>
        <operation>startsWith</operation>
        <value>22TE</value>
    </filters>
    <label>Vérification Code Agresso session</label>
</ListView>