force-app/main/default/objects/Session__c/listViews/X21_22_OFFRE_SESSIONS_de_SELECTION.listView-meta.xml
<ListView>
    <fullName>X21_22_OFFRE_SESSIONS_de_SELECTION</fullName>
    <columns>NAME</columns>
    <columns>Code_agresso_for__c</columns>
    <columns>Code_Agresso_Session_formation__c</columns>
    <columns>Date_de_debut_de_session__c</columns>
    <columns>Date_de_fin_de_session__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_agresso_for__c</field>
        <operation>startsWith</operation>
        <value>22SEL</value>
    </filters>
    <label>21-22 OFFRE SESSIONS de SELECTION</label>
</ListView>